apps/headplane/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headplane-redirect
  namespace: headplane
spec:
  redirectRegex:
    regex: "^https://headplane.lab.jackhumes.com/?$"
    replacement: "https://headplane.lab.jackhumes.com/admin"
    permanent: false
