apps/headplane/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: headplane
  namespace: headplane
spec:
  selector:
    app: headplane
  ports:
    - port: 3000
      targetPort: http
      name: http
